--- a/index.html
+++ b/index.html
@@ -91,8 +91,8 @@
       <div class="flex items-center gap-12">
         <!-- Social links: thay link thật vào href -->
         <div class="flex items-center gap-8">
-          <a class="btn" href="https://zalo.me/0564313288" target="\_blank" rel="noreferrer">Zalo</a>
-          <a class="btn" id="tgBtn" href="https://t.me/0564313288" rel="noopener noreferrer" data-tg-phone="0564313288" data-tg-username="">Telegram</a>
+          <a class="btn" id="zaloBtn" href="https://zalo.me/0564313288" rel="noopener" data-phone="0564313288">Zalo</a>
+          <a class="btn" id="tgBtn" href="https://t.me/" rel="noopener" data-tg-phone="0564313288" data-tg-username="">Telegram</a>
           <a class="btn" href="https://www.facebook.com/nam.acoustic.33" target="\_blank" rel="noreferrer">Facebook</a>
         </div>
         <a class="btn btn-primary pulse" 
@@ -359,62 +359,119 @@
   <footer class="footer">
     <div class="container">© <span id="y"></span> Javis. All rights reserved.</div>
   </footer>
-  <script>document.getElementById('y').textContent = new Date().getFullYear()</script>
+  
+
+
+<style>
+.toast{
+  position:fixed;left:50%;transform:translateX(-50%);
+  bottom:16px;max-width:92vw;z-index:9999;
+  background:#0f172a;color:#fff;border-radius:12px;
+  padding:12px 14px;box-shadow:0 8px 24px rgba(15,23,42,.3);
+  display:none;align-items:center;gap:10px;font-size:14px
+}
+.toast.show{display:flex}
+.toast .close{margin-left:8px;background:transparent;border:0;color:#fff;cursor:pointer;font-weight:700}
+.toast a{color:#bfdbfe}
+</style>
+<div id="deepLinkToast" class="toast" role="status" aria-live="polite">
+  <span>Trình duyệt trong ứng dụng có thể chặn mở Zalo/Telegram. Hãy chọn <b>Mở trong trình duyệt</b> (Chrome/Safari) để kết nối app.</span>
+  <button class="close" aria-label="Đóng">×</button>
+</div>
 
 <script>
-  (function () {
-    const btn = document.getElementById('tgBtn');
+(function () {
+  // ===== Helpers =====
+  function toE164(v) {
+    if (!v) return '';
+    var s = v.replace(/\D+/g, '');
+    if (!s) return '';
+    if (v.trim().startsWith('+')) return v.trim();
+    if (s.startsWith('0')) return '+84' + s.slice(1);
+    if (s.startsWith('84')) return '+' + s;
+    return '+' + s;
+  }
+  function isInAppBrowser() {
+    var ua = navigator.userAgent || '';
+    return /(FBAN|FBAV|Instagram|Line|Zalo|ZingApp|Messenger)/i.test(ua);
+  }
+  function setupDeepLink(btnId, builder) {
+    var btn = document.getElementById(btnId);
     if (!btn) return;
+    var ua = navigator.userAgent || '';
+    var isAndroid = /Android/i.test(ua);
+    var isIOS = /iPhone|iPad|iPod/i.test(ua);
+    var isMobile = isAndroid || isIOS;
 
-    // Read configuration from data attributes (set on the <a> tag)
-    const tgUsername = (btn.dataset.tgUsername || '').trim();   // e.g. 'your_username'
-    const phoneRaw   = (btn.dataset.tgPhone || '').trim();      // e.g. '0564313288' (VN local)
+    var links = builder({ isAndroid: isAndroid, isIOS: isIOS });
+    btn.setAttribute('href', links.web);
+    btn.removeAttribute('target'); // avoid opening new tab
 
-    // Convert local VN number to E.164 if needed
-    function toE164(v) {
-      if (!v) return '';
-      let p = v.replace(/\D+/g, '');
-      if (!p) return '';
-      if (p.startsWith('0')) return '+84' + p.slice(1);   // VN: 0xxxxxxxxx -> +84xxxxxxxxx
-      if (p.startsWith('84')) return '+' + p;
-      if (v.startsWith('+')) return v;
-      return '+' + p;
-    }
+    if (!isMobile) return;
 
-    const phoneE164 = toE164(phoneRaw);
-    const hasUsername = !!tgUsername;
-    const hasPhone = !!phoneE164;
+    btn.addEventListener('click', function (e) {
+      e.preventDefault();
+      var t = setTimeout(function () { window.location.href = links.web; }, 1200);
+
+      function cancel() {
+        if (t) { clearTimeout(t); t = null; }
+      }
+      document.addEventListener('visibilitychange', function onVis() {
+        if (document.visibilityState === 'hidden') { cancel(); }
+      }, { once: true });
+      window.addEventListener('pagehide', cancel, { once: true });
+
+      // prefer intent on Android, scheme on iOS
+      window.location.href = links.app;
+    }, { passive: false });
+  }
+
+  // ===== Telegram =====
+  setupDeepLink('tgBtn', function (ctx) {
+    var el = document.getElementById('tgBtn');
+    var username = (el.dataset.tgUsername || '').trim();
+    var phoneE164 = toE164((el.dataset.tgPhone || '').trim());
+    var digits = phoneE164.replace(/^\+/, '');
 
     // Build links
-    const webLink = hasUsername
-      ? ('https://t.me/' + encodeURIComponent(tgUsername))
-      : (hasPhone ? ('https://t.me/' + encodeURIComponent(phoneE164.replace(/^\+/, ''))) : 'https://t.me/');
+    var web = username ? ('https://t.me/' + encodeURIComponent(username))
+                       : (digits ? ('https://t.me/+' + digits) : 'https://t.me/');
+    var appScheme = username ? ('tg://resolve?domain=' + encodeURIComponent(username))
+                             : ('tg://resolve?phone=' + encodeURIComponent(phoneE164));
+    var appIntent = username
+      ? ('intent://resolve?domain=' + encodeURIComponent(username) +
+         '#Intent;scheme=tg;package=org.telegram.messenger;S.browser_fallback_url=' + encodeURIComponent(web) + ';end')
+      : ('intent://resolve?phone=' + encodeURIComponent(phoneE164) +
+         '#Intent;scheme=tg;package=org.telegram.messenger;S.browser_fallback_url=' + encodeURIComponent(web) + ';end');
 
-    const appLink = hasUsername
-      ? ('tg://resolve?domain=' + encodeURIComponent(tgUsername))
-      : (hasPhone ? ('tg://resolve?phone=' + encodeURIComponent(phoneE164)) : 'tg://');
+    // If both empty, keep web only
+    var app = ctx.isAndroid ? appIntent : appScheme;
+    return { app: app, web: web };
+  });
 
-    // Detect mobile (simple but effective for this case)
-    const isMobile = /Android|iPhone|iPad|iPod/i.test(navigator.userAgent);
+  // ===== Zalo =====
+  setupDeepLink('zaloBtn', function (ctx) {
+    var el = document.getElementById('zaloBtn');
+    var phoneE164 = toE164((el.dataset.phone || '').trim());
+    var digits = phoneE164.replace(/^\+/, '');
 
-    // Ensure normal behavior (webLink) for non-mobile or when JS disabled
-    btn.setAttribute('href', webLink);
+    var web = digits ? ('https://zalo.me/' + digits) : 'https://zalo.me/';
+    var appScheme = 'zalo://conversation?phone=' + encodeURIComponent(phoneE164);
+    var appIntent = 'intent://conversation?phone=' + encodeURIComponent(phoneE164) +
+        '#Intent;scheme=zalo;package=com.zing.zalo;S.browser_fallback_url=' + encodeURIComponent(web) + ';end';
 
-    // On mobile: try opening Telegram app via deep link; fallback to web
-    btn.addEventListener('click', function (e) {
-      if (!isMobile) return;     // Desktop: keep default behavior
-      e.preventDefault();
+    var app = ctx.isAndroid ? appIntent : appScheme;
+    return { app: app, web: web };
+  });
 
-      // Attempt to open the app
-      window.location.href = appLink;
-
-      // Fallback after ~1.2s if app is not installed / deep link fails
-      setTimeout(function () {
-        // If the app didn't catch the deep link, navigate to web
-        window.location.href = webLink;
-      }, 1200);
-    }, { passive: false });
-  })();
+  // ===== In-app browser notice =====
+  var toast = document.getElementById('deepLinkToast');
+  if (toast && isInAppBrowser()) {
+    toast.classList.add('show');
+    var closeBtn = toast.querySelector('.close');
+    if (closeBtn) closeBtn.addEventListener('click', function(){ toast.classList.remove('show'); });
+  }
+})();
 </script>
 
 </body>
