--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
         <!-- Social links -->
         <div class="flex items-center gap-8">
           <a class="btn" id="zaloBtn" href="https://zalo.me/0564313288" rel="noopener" data-phone="0564313288">Zalo</a>
-          <a class="btn" id="tgBtn" href="https://t.me/" rel="noopener" data-tg-phone="0564313288" data-tg-username="">Telegram</a>
+          <a class="btn" id="tgBtn" href="https://t.me/namtrader15" rel="noopener" data-tg-phone="namtrader15" data-tg-username="">Telegram</a>
           <a class="btn" href="https://www.facebook.com/nam.acoustic.33" target="\_blank" rel="noreferrer">Facebook</a>
         </div>
         <a class="btn btn-primary pulse" 
