--- a/thong_bao.html
+++ b/thong_bao.html
@@ -101,7 +101,7 @@
 
       <p>Hi all…</p>
       <p>Rất cảm ơn mọi người đã sử dụng và theo dõi mình và <strong>JAVIS</strong>.</p>
-      <p>Thông báo nhỏ đến mọi người: mình sẽ <strong>tạm dừng model LITE&nbsp;FREE</strong> trên trang web vào <mark>ngày 3/10</mark>.</p>
+      <p>Thông báo nhỏ đến mọi người: mình sẽ <strong>tạm dừng model LITE&nbsp;FREE</strong> trên trang web vào <mark>ngày 3/10/2025</mark>.</p>
       <p>Thay vào đó, mình sẽ chia sẻ bằng cách <strong>gửi model .exe</strong> (<mark>bản mẫu 30&nbsp;day free trial</mark>) cho những anh em thật sự quan tâm và hiểu về <strong>AI&nbsp;trading</strong>.</p>
 
       <div class="cta">
