--- a/index.html
+++ b/index.html
@@ -95,8 +95,9 @@
 <a class="btn" data-phone="0564313288" href="https://zalo.me/0564313288" id="zaloBtn" rel="noopener">Zalo</a>
 <a class="btn" data-tg-phone="namtrader15" data-tg-username="" href="https://t.me/namtrader15" id="tgBtn" rel="noopener">Telegram</a>
 <a class="btn" href="https://www.facebook.com/nam.acoustic.33" rel="noreferrer" target="\_blank">Facebook</a>
+<a class="btn btn-primary" href="free-tools.html" rel="noopener">Tools miễn phí</a>
 </div>
-<a class="btn btn-primary pulse" href="thong_bao.html" rel="noopener noreferrer" target="_blank">Dùng Javis bản Free</a>
+<a class="btn btn-primary pulse" href="https://7dd0e84366df.ngrok-free.app/login" rel="noopener noreferrer" target="_blank">Dùng Javis bản Free</a>
 </div>
 </div>
 </header>
@@ -195,6 +196,7 @@
 <a class="btn btn-primary" href="#payment">Liên hệ sử dụng</a>
 </div>
 <p class="muted" style="margin-top:8px"><strong>Ưu đãi áp dụng:</strong> 100 KH đầu tiên, hoặc đăng ký từ ngày 23/9–3/10.</p>
+
 <div class="card price hot">
 <div class="amount">6,000 USDT</div><div class="period">/ trọn đời</div>
 <span class="badge">Full source code .py</span>
@@ -205,38 +207,10 @@
 </ul>
 <a class="btn btn-primary" href="#payment" style="margin-top:8px">Mua Full Source .py</a>
 </div>
+
 <p class="muted" style="margin:8px 0 0 0"><strong>Lưu ý (AS‑IS):</strong> Chỉ bán mã nguồn .py hiện hành; 
 <em>không</em> kèm triển khai, hỗ trợ kỹ thuật, cập nhật hay cam kết hiệu suất.</p>
 </div>
-<section id="combos" style="margin-top:32px">
-<h2 style="font-size:28px;font-weight:800;margin:0 0 8px 0">Combo ưu đãi</h2>
-<div class="grid grid-3" style="margin-top:12px">
-<div class="card price">
-<div class="muted" style="font-size:12px">BÁN CHẠY</div>
-<h3>Combo Duo Trader — Tháng</h3>
-<div class="amount">149 USDT <span class="period">/ tháng</span></div>
-<span class="badge">-45% so với lẻ</span>
-<ul class="clean muted"><li><strong>Javis Quant</strong> (70 USDT/tháng)</li><li><strong>Javis AutoBTC</strong> (200 USDT/tháng)</li><li>1 tài khoản giao dịch mỗi chiến lược</li></ul>
-<a class="btn btn-primary" href="#payment" style="margin-top:8px">Chọn Combo tháng</a>
-</div>
-<div class="card price hot">
-<div class="muted" style="font-size:12px">TIẾT KIỆM NHẤT</div>
-<h3>Combo Duo Trader — 3 tháng</h3>
-<div class="amount">290 USDT <span class="period">/ 3 tháng</span></div>
-<span class="badge">-57% so với lẻ</span>
-<ul class="clean muted"><li><strong>Javis AutoBTC</strong> 3 tháng</li><li><strong>Javis Quant</strong> 1 tháng (bonus)</li></ul>
-<a class="btn btn-primary" href="#payment" style="margin-top:8px">Chọn Combo 3 tháng</a>
-</div>
-<div class="card price">
-<div class="muted" style="font-size:12px">CHO TEAM</div>
-<h3>AutoBTC x2 tài khoản — 12 tháng</h3>
-<div class="amount">390 USDT <span class="period">/ 12 tháng</span></div>
-<span class="badge">-92% so với lẻ</span>
-<ul class="clean muted"><li>2 instance <strong>Javis AutoBTC</strong> trong 12 tháng</li><li>Kèm <strong>Javis Quant</strong> 6 tháng</li><li>Scale cho desk nhỏ/đội 2 người</li></ul>
-<a class="btn" href="#payment" style="margin-top:8px">Chọn Combo AutoBTC x2 (12 tháng)</a>
-</div>
-</div>
-</section>
 </div>
 </section>
 <!-- ===== TradingView ===== -->
@@ -317,6 +291,7 @@
 <ul class="clean muted"><li>Cá nhân hoá theo nhu cầu</li><li>Liên hệ để biết thêm</li></ul>
 <a class="btn" href="#payment" style="margin-top:8px">Liên hệ</a>
 </div>
+
 <div class="card price">
 <div class="muted" style="font-size:12px">DEVELOPER</div>
 <h3>Full Source .py — Trợ lý</h3>
@@ -329,6 +304,7 @@
 </ul>
 <a class="btn" href="#payment" style="margin-top:8px">Mua Full Source .py</a>
 </div>
+
 <p class="muted" style="margin:8px 0 0 0"><strong>Lưu ý (AS‑IS):</strong> Chỉ bán mã nguồn .py hiện hành; 
 <em>không</em> kèm triển khai, hỗ trợ kỹ thuật, cập nhật hay cam kết hiệu suất. Phù hợp với team dev tự triển khai.</p>
 </div>
