--- a/free-tools.html
+++ b/free-tools.html
@@ -195,7 +195,7 @@
     </section>
 
     <section class="card" style="margin-top:16px">
-      <h2 style="margin:0 0 8px 0">Disclaimer (cho đỡ rắc rối)</h2>
+      <h2 style="margin:0 0 8px 0">Disclaimer </h2>
       <p class="footer-note" style="margin:0">
         Các tool này phục vụ mục đích học tập/phân tích dữ liệu. Không phải lời khuyên đầu tư.
       </p>
