--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@
 <h1 class="hero-title">Cửa hàng Javis — Trợ lý tín hiệu &amp; Auto Trading</h1>
 <p class="muted" style="font-size:18px;margin-top:8px">Javis trợ lý đưa ra tín hiệu và copy lệnh lên MT5; các phiên bản đặc thù gồm XAU scalping m1 và Javis Bitcoin h1.</p>
 <div class="flex items-center gap-12" style="margin-top:16px">
-<a class="btn btn-primary" href="#pricing">Xem bảng giá</a>
+<a class="btn btn-primary" href="https://7dd0e84366df.ngrok-free.app/static/pricing.html">Xem bảng giá</a>
 <a class="btn" href="#assistant">Tìm hiểu Javis trợ lý</a>
 </div>
 </div>
